rd/hds/frontend/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector: {}
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: replicated
        app.life.uni-leipzig.de/service-level: silver
    spec:
      enableServiceLinks: false
      containers:
      - name: blaze-frontend
        image: ghcr.io/samply/blaze-frontend:1.7.0@sha256:2d6ecc56e577eccc10e5d964a45049cf83cf29ada185ad8318b8f19eea566978
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: ca-certs
          mountPath: /certificates
          readOnly: true
        startupProbe:
          httpGet:
            path: /fhir
            port: http
          failureThreshold: 6
        readinessProbe: &probe
          httpGet:
            path: /fhir
            port: http
        livenessProbe: *probe
        resources:
          requests:
            cpu: "125m"
            memory: "128Mi"
          limits:
            memory: "128Mi"
      volumes:
      - name: ca-certs
        configMap:
          name: life-ca-certs
